[FIX] Overflow problem on draggable items

--- a/app/layout.css
+++ b/app/layout.css
@@ -2,6 +2,4 @@ body {
   --mantine-color-body: light-dark(var(--mantine-color-macBlue-6), var(--mantine-color-dark-0));
   /* background-color: light-dark(var(--mantine-color-macBlue-6), var(--mantine-color-dark-0)) !important; */
   --borders-size: rem(2px);
-  position: relative;
-  overflow: hidden;
 }
